# rest_api/app.js
@@ -3,10 +3,14 @@ var express = require('express');
 var path = require('path');
 var cookieParser = require('cookie-parser');
 var logger = require('morgan');
+const dotenv = require('dotenv');
+dotenv.config();
 
 var indexRouter = require('./routes/index');
 var usersRouter = require('./routes/users');
 var suppliersRouter = require('./routes/suppliers');
+var authJWT = require('./middleware/auth');
+
 /* REFERENCIA AL MÓDULO */
 const swaggerUi = require('swagger-ui-express')
 
@@ -25,10 +29,10 @@ app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 app.use(express.static(path.join(__dirname, 'public')));
-
+/* Agregue el middleware para la ruta '/suppliers' */
 app.use('/', indexRouter);
 app.use('/users', usersRouter);
-app.use('/suppliers', suppliersRouter);
+app.use('/suppliers',authJWT, suppliersRouter);
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
